[gd_scene load_steps=9 format=3 uid="uid://bqny06828bj8j"]

[ext_resource type="Script" path="res://addons/goolash/ui/timeline_layer_info.gd" id="1_a1h0g"]
[ext_resource type="Texture2D" uid="uid://bky2ewaclarto" path="res://addons/goolash/icons/GuiVisibilityVisible.svg" id="2_nqcyt"]
[ext_resource type="Texture2D" uid="uid://b52vlufbobpah" path="res://addons/goolash/icons/Remove.svg" id="2_p6o14"]
[ext_resource type="Texture2D" uid="uid://bx6580m4kytvp" path="res://addons/goolash/icons/Lock.svg" id="3_17d7r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dbos8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vc5fc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2d8xa"]
bg_color = Color(1, 0.2, 0.2, 1)
corner_radius_top_left = 6
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h5x24"]

[node name="LayerInfo" type="Panel"]
self_modulate = Color(1, 1, 1, 0.47451)
custom_minimum_size = Vector2(220, 30)
offset_right = 220.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_dbos8")
script = ExtResource("1_a1h0g")
style_normal = SubResource("StyleBoxEmpty_vc5fc")
style_active = SubResource("StyleBoxFlat_2d8xa")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(220, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="ButtonDelete" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
icon = ExtResource("2_p6o14")
flat = true
icon_alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="LineEditName" type="LineEdit" parent="HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_h5x24")
text = "Layer 1"
placeholder_text = "Layer..."

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="ButtonVisible" type="Button" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.54902, 0.54902, 0.54902, 1)
toggle_mode = true
icon = ExtResource("2_nqcyt")
flat = true
icon_alignment = 1

[node name="ButtonLocked" type="Button" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
toggle_mode = true
icon = ExtResource("3_17d7r")
flat = true
icon_alignment = 1

[connection signal="focus_exited" from="HBoxContainer/Control/LineEditName" to="HBoxContainer" method="_on_line_edit_name_focus_exited"]
[connection signal="text_submitted" from="HBoxContainer/Control/LineEditName" to="HBoxContainer" method="_on_line_edit_name_text_submitted"]
[connection signal="toggled" from="HBoxContainer/HBoxContainer/ButtonVisible" to="HBoxContainer" method="_on_button_visible_toggled"]
